--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Flask-MongoDB Example App</title>
+    <title>Rate your course NYU!</title>
     <link
       rel="stylesheet"
       href="{{ url_for('static', filename='css/style.css') }}"
@@ -10,18 +10,18 @@
   <body>
     <div class="container">
       <header>
-        <h1>Flask-MongoDB Example App</h1>
+        <h1>Rate your course!</h1>
         <p>
           <a href="{{ url_for('home')}}">Home</a> |
-          <a href="{{ url_for('read')}}">All posts</a> |
-          <a href="{{ url_for('create')}}">Create a post</a>
+          <a href="{{ url_for('read')}}">Course forum</a> |
+          <a href="{{ url_for('create')}}">Rate a course</a>
         </p>
       </header>
       <main>{% block container %} {% endblock %}</main>
       <footer>
         <p>
           The source code for this example app is
-          <a href="https://github.com/nyu-database-design/flask-mongodb-web-app"
+          <a href="https://github.com/dbdesign-students-spring2024/7-web-app-aLittlennnnn"
             >available on Github</a
           >.
         </p>
