--- a/templates/create.html
+++ b/templates/create.html
@@ -3,8 +3,33 @@
 <p>Create a new record in the MongoDB database collection.</p>
 <form method="POST" action="{{ url_for('create_post') }}">
   <p>Your name: <input type="text" id="fname" name="fname" /><br /></p>
-  <p>
-    Message:
+  <p>Which course? <input type="text" id="course_name" name="course_name" /><br /></p>
+  <p>Given by? <input type="text" id="professor_name" name="professor_name" /><br /></p>
+  <p>For which school?: 
+    <select id="major" name="major">
+      <option value="CAS">College of Arts and Science</option>
+      <option value="Dental">College of Dentistry</option>
+      <option value="Gallatin">Gallatin School of Individualized Study</option>
+      <option value="Stern">Leonard N. Stern School of Business</option>
+      <option value="LS">Liberal Studies</option>
+      <option value="Abu">NYU Abu Dhabi</option>
+      <option value="SH">NYU Shanghai</option>
+      <option value="OP">Opportunity Programs</option>
+      <option value="Steinhardt">Steinhardt School of Culture, Education, and Human Development</option>
+      <option value="Tandon">Tandon School of Engineering</option>
+      <option value="Tisch">Tisch School of the Arts</option>
+      <option value="Others">Others</option>
+    </select>
+  </p>
+  <p>Type of course: 
+    <select id="course_type" name="course_type">
+      <option value="core">Core Curriculum</option>
+      <option value="major_core">Major Core</option>
+      <option value="Elective">Electives</option>
+    </select>
+  </p>
+  <p>Overall Rating (0-5): <input type="number" id="course_rating" name="course_rating" /><br /></p>
+  <p>Comment:
     <textarea type="text" id="fmessage" name="fmessage"></textarea>
   </p>
   <p>
