--- a/templates/read.html
+++ b/templates/read.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 
 {% block container %}
-<h2>Read</h2>
-<p>This page shows information pulled from a MongoDB database collection.
+<h2>Course forum</h2>
+<p>Read others ratings on courses they've taken.</p>
         
     {% for doc in docs %}
     <div>
