--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
 
 {% block container %}
-<h2>Welcome!</h2>
-<p>Welcome to the Flask app. This is the home page. Here are a few links to example pages you might find interesting.
+<h2>Welcome to the course rating site!</h2>
+<p>Busy finding the right course to take for next semester? Check what previous students have thought about your intention dream course!
     <ul>
-        <li><a href="{{ url_for('read')}}">a page that displays information pulled from a MongoDB database collection</a></li>
-        <li><a href="{{ url_for('create')}}">a page with a form you can submit to create a new record in a MongoDB collection</a></li>
+        <li><a href="{{ url_for('read')}}">read all the previous comments on specific courses</a></li>
+        <li><a href="{{ url_for('create')}}">write a comment</a></li>
     </ul>
 </p>
 {% endblock %}
